<resources>
    <string name="app_name" translatable="false">BLABrrr</string>
    <string name="creator" translatable="false">By Raymond R</string>

    <!--fonts-->
    <string name="fontBold" translatable="false">fonts/Gilroy-Bold.ttf</string>
    <string name="fontExtraBold" translatable="false">fonts/Gilroy-ExtraBold.otf</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_inbox">Inbox</string>

    <!-- common -->
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="username">Username</string>
    <string name="OK">OK</string>
    <string name="continue_">Continue</string>
    <string name="post">Post</string>
    <string name="loading...">Loading…</string>
    <string name="logout">Log Out</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- LandingActivity -->
    <string name="landing_info">See What\'s Going on\n\nAround You in</string>

    <!-- SignUpStep1Activity -->
    <string name="sus1_info">Show the world\n\nwho you are!</string>
    <string name="sus1_add_picture">Add Picture</string>
    <string name="sus1_err_username_exists">Username is not available. Please choose other username</string>
    <string name="sus1_err_username_empty">Please input username first</string>

    <!-- SignUpStep2Activity -->
    <string name="sus2_err_name_empty">Please input your name</string>
    <string name="sus2_err_password_empty">Please input your password</string>

    <!-- LoginActivity -->
    <string name="login_welcome">Welcome Back!</string>

    <!-- PostActivity -->
    <string name="post_info">What\'s Going On?</string>
    <string name="post_hint">Write to the world here</string>
    <string name="post_error_empty_message">Please input your message</string>
    <string name="post_success">Posted to the world!</string>

    <!-- MyPostActivity -->
    <string name="mypost_title">My Posts</string>
    <string name="mypost_delete_confirmation_message">Are you sure to delete this post?</string>
    <string name="mypost_empty">No any post yet</string>

    <!-- MainActivity -->
    <string name="main_back_press_confirmation">Click again to hide this app</string>

</resources>