<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_bottomnav_home_active"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_bottomnav_search_idle"
        android:title="@string/title_search" />

    <item
        android:icon="@drawable/ic_bottomnav_search_idle"
        android:title="" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_bottomnav_notification_idle"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_bottomnav_inbox_idle"
        android:title="@string/title_inbox" />

</menu>