<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.fatdino.blabrrr.ui.landing.LandingActivityViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_big">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo" />

            <TextView
                style="@style/TextWhite.Big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:text="@string/landing_info" />

            <ImageView
                style="@style/ImageLogoText"
                android:layout_marginTop="@dimen/padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@drawable/ic_bg_onboarding"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/btnSignUp"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_big"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/ButtonWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                style="@style/TextWhite.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                style="@style/TextWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator" />
        </LinearLayout>
    </LinearLayout>
</layout>