<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.fatdino.blabrrr.ui.myposts.MyPostActivityViewModel" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        tools:context=".ui.home.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextPrimary.Big.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mypost_title" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnLogout"
                style="@style/ButtonPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout" />
        </LinearLayout>

        <View style="@style/Divider" />

        <TextView
            style="@style/TextWhite.Bold"
            mutableVisibilityBoolean="@{viewModel.noPostVisibilityBoolean}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_big2"
            android:gravity="center_horizontal"
            android:text="@string/mypost_empty" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding" />
    </LinearLayout>
</layout>