<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.fatdino.blabrrr.ui.signup.SignUpStep1ViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ibBack"
            style="@style/ButtonBackArrowWhite"
            android:layout_margin="@dimen/padding" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding_big"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding">


                <TextView
                    style="@style/TextWhite.Big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sus1_info" />

                <LinearLayout
                    android:id="@+id/llAddPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/padding_big2"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        imageFile="@{viewModel.imageFile}"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_emptyprofile" />

                    <TextView
                        style="@style/TextPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding"
                        android:text="@string/sus1_add_picture" />
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:hint="@string/username"
                    android:padding="@dimen/padding_inputtext"
                    android:theme="@style/TextInputLayoutAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/TextInputEditTextAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnContinue"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginTop="@dimen/padding_big"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginBottom="@dimen/padding_big2"
            android:text="@string/continue_" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bg_loginregister" />
    </LinearLayout>
</layout>