<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.fatdino.blabrrr.ui.post.PostActivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:orientation="horizontal">

            <ImageView
                style="@style/ImageLogoText"
                android:layout_width="@dimen/logo_text_bar_width"
                android:layout_height="@dimen/logo_text_bar_height" />
        </LinearLayout>

        <View style="@style/Divider" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <TextView
                    style="@style/TextWhite.Big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/post_info" />

                <ImageView
                    imageFileHideIfNull="@{viewModel.imageFile}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:adjustViewBounds="true" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/post_hint"
                    android:padding="@dimen/padding_inputtext"
                    android:theme="@style/TextInputLayoutAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/TextInputEditTextAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:inputType="textMultiLine|textCapSentences"
                        android:minLines="5"
                        android:text="@={viewModel.message}" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ibImage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="#00000000"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_media" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnPost"
                        style="@style/ButtonPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="200dp"
                        android:text="@string/post" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>